--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     height: 100vh;
     width: 100%;
+    font-family: Nunito, sans-serif;
     background-color: #0081C9;
 }
 /*//////////////////////// NAVBAR CSS START //////////////////////////////*
@@ -16,7 +17,19 @@ body {
     align-items: center; /* vertical */
     background-color: #0081C9;
     color: #fff;
-    padding: 20px;
+    padding: 30px;
+}
+
+.title {
+    font-size: 35px;
+    font-weight: 900;
+    color: #fff;
+    position: absolute;
+    left: 30px;
+    text-align: left;
+    text-transform: capitalize;
+    letter-spacing: 0.5rem;
+    text-shadow: 0.5rem 0.5rem 0.5rem #000;
 }
 
   
@@ -24,7 +37,8 @@ body {
   .navbar button {
     border-radius: 28px;
     border: none;
-    font-family: Arial;
+    font-family: Nunito, sans-serif;
+    font-weight: 650;
     color: #000000;
     font-size: 20px;
     background: #ffffff;
