--- a/client/Front-page/index.css
+++ b/client/Front-page/index.css
@@ -7,12 +7,13 @@ body{
     margin-left: 15px;
 }
 img{
-    width: 500px;
-    height: 100px;
+    width: 400px;
+    height: 90px;
     margin-top: -10px;
 }
 #menu{
-    margin-top: -80px;
+    margin-top: -70px;
+    border-bottom: 1px solid;
 }
 ul {
     list-style-type: none;
@@ -35,7 +36,9 @@ ul {
     padding: 10px 12px;
     text-decoration: none;
     max-width: 720px;
-    margin: 0 auto;
+    margin: 0 1px;
+    background-color: #D9D9D9;
+    border-radius: 60px;
   }
   li a:hover {
     background-color: #000000;
@@ -70,4 +73,6 @@ background-color: #B9F3FC;
 .ptitle{
     text-align: center;
 }
-
+p{
+    font-size: 20px;
+}
