--- a/client/assets/styles-2.css
+++ b/client/assets/styles-2.css
@@ -20,7 +20,8 @@ body {
     padding: 30px;
 }
 
-.title {
+/* Used to be the old title but switched to icon now */
+/* .title {
     font-size: 35px;
     font-weight: 900;
     color: #fff;
@@ -30,6 +31,13 @@ body {
     text-transform: capitalize;
     letter-spacing: 0.5rem;
     text-shadow: 0.3rem 0.3rem 0.3rem #000;
+} */
+
+#title-img {
+  width: 50%;
+  height: 18%;
+  position: absolute;
+  left: 30px;
 }
 
   
@@ -184,7 +192,6 @@ input[type="radio"] {
 
 
 /*//////////////////////// PROGRESS BAR CSS START //////////////////////////////*/
-
 #progress {
   width: 25%;
   height: 10px;
@@ -202,7 +209,6 @@ progress::-webkit-progress-value {
   background-color: #FFC93C;
   border-radius: 28px;
 }
-
 /*//////////////////////// PROGRESS BAR CSS END //////////////////////////////*/
 
 
@@ -210,11 +216,14 @@ progress::-webkit-progress-value {
 
 
 /*//////////////////////// MEDIA QUERIES CSS START //////////////////////////////*/
-
   /* Media query to show the hamburger menu on small screens */
   @media screen and (max-width: 720px) {
     /* Hide regular navbar links */
     .navbar button {
+      display: none;
+    }
+
+    #title-img {
       display: none;
     }
   
@@ -229,5 +238,4 @@ progress::-webkit-progress-value {
       display: block;
     }
   }
-
   /*//////////////////////// MEDIA QUERIES CSS END //////////////////////////////*/
