--- a/client/flip/flip.css
+++ b/client/flip/flip.css
@@ -9,19 +9,27 @@ body{
    
 
     height: 400px;
-    background: none;
+    
     margin: auto;
     display: flex;
-    /* transform: translate(-50%, -50%);
-    border-color: black; */
+    /* transform: translate(-50%, -50%); */
+    background-color: rgb(1, 40, 60);
+    perspective: 1000px;
 
 }
 .flashCard{
 position: relative;
-width: 100%;
-height: 100%;
-/* transform-style: preserve-3d;
-transition: all 0.8s ease; */
+width: 90%;
+height: 90%;
+margin: 5%;
+box-shadow: 1px 1px 1px rgb(248, 249, 250);
+transform:scale(1);
+transform-style: preserve-3d;
+transition: transform 0.5s ;
+}
+.flashCard:active{
+    transform: scale(0.97);
+    transition: transform .2s;
 }
 
 .front{
@@ -32,6 +40,7 @@ backface-visibility: hidden;
 background: rgb(231, 231, 1);
 color: black;
 text-align: center;
+transform: rotateY(180deg);
 }
 
 .back{
@@ -42,9 +51,9 @@ backface-visibility: hidden;
 background-color: aqua;
 color: blue;
 text-align: center;
-/* transform: rotateY(180deg); */
+
 }
 
-/* .flip{
+.flashCard.flip{
     transform: rotateY(180deg);
-} */
+}
