--- a/client/Front-page/index.css
+++ b/client/Front-page/index.css
@@ -1,6 +1,7 @@
 body{
     background-color: #58B09C;
-    margin: 40px 40px;
+    margin: 40px 0px;
+    margin-left: 50px;
 }
 #subtitle{
     font-size: 30px;
@@ -11,16 +12,16 @@ img{
     height: 90px;
     margin-top: -10px;
 }
-#menu{
-    margin-top: -70px;
-    border-bottom: 1px solid;
-}
+
 ul {
     list-style-type: none;
-    margin: 0;
     padding: 0;
     overflow: hidden;
     white-space: nowrap;
+    margin-top: -70px;
+    border-bottom: 1px solid;
+    margin-bottom: 80px;
+    margin-right: 90px;
   }
   
   li {
@@ -38,33 +39,35 @@ ul {
     max-width: 720px;
     margin: 0 1px;
     background-color: #D9D9D9;
-    border-radius: 60px;
+    border-radius: 10px;
   }
   li a:hover {
     background-color: #000000;
     color: #58B09C;
-    border-radius: 30px;
+    border-radius: 10px;
   }
 .subjects{
     border: 1px solid;
     border-radius: 20px;
-    margin-top: 5px ;
+    margin-top: -110px ;
     font-size: 25px;
     float: left;
     width: 45%;
-    margin: 10px;
     padding: 10px 10px;
-
 }
 #sub1{
     background-color: #FFB72B;
+    margin-bottom: 140px;
+    margin-right: 10px;
 }
 #sub2{
 background-color: #B9F3FC;
+margin-bottom: 140px;
 }
 
 #sub3{
     background-color: #F25A04;
+    margin-right: 10px;
     
 }
 #sub4{
@@ -75,4 +78,16 @@ background-color: #B9F3FC;
 }
 p{
     font-size: 20px;
+}
+h3{
+   margin-bottom: -110px;
+}
+#sub-heading ul{
+    border: none;
+}
+#new-card{
+    margin-top: 70px;
+    width: 300px;
+    margin-right: -20px;
+    padding: 0px 20px;
 }
