--- a/client/assets/styles-2.css
+++ b/client/assets/styles-2.css
@@ -128,18 +128,56 @@ color: black;
 
 
 /*//////////////////////// FLASHCARD CSS START //////////////////////////////*/
+.maincontainer{
+  width: 480px;
+    margin: 70px auto 0 auto;
+    background-color: none;
+    padding: 4rem;
+    display: flex;
+    perspective: 1000px;
+   
+    
+}
+
 .flashcard {
-  width: 30rem;
-  margin: 70px auto 0 auto;
-  border-radius: 28px;
-  position: relative;
-  text-align: center;
-  background-color: #FFC93C;
-  padding: 4rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: 0 0 40px 20px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    min-height: 300px;
+    border-radius: 28px;
+    position: relative;
+    text-align: center;
+    background-color: #FFC93C;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 0 40px 20px rgba(0, 0, 0, 0.2);
+    
+    transform-style: preserve-3d;
+    transition: transform 0.5s ;
+}
+
+.front{
+  position: absolute;
+  width: 100%;
+height: 100%;
+backface-visibility: hidden;
+
+text-align: center;
+
+}
+
+.back{
+  position: absolute;
+  width: 100%;
+height: 100%;
+backface-visibility: hidden;
+transform: rotateY(180deg);
+text-align: center;
+
+}
+
+.flashcard.flip{
+  transform: rotateY(180deg);
 }
 
 .flashcard-form {
@@ -197,7 +235,7 @@ input[type="radio"] {
   margin: 0px;
   position: absolute;
   right: 20px;
-  bottom: 20px;
+  bottom: 80px;
 }
 
 #next-button:hover {
@@ -218,8 +256,8 @@ input[type="radio"] {
   cursor: pointer;
   margin: 0px;
   position: absolute;
-  bottom: 20px;
-  left: 20px;
+  top: 300px;
+  right: 340px;
 }
 
 #previous-button:hover {
