--- a/client/Front-page/createcard.css
+++ b/client/Front-page/createcard.css
@@ -47,6 +47,7 @@ ul {
     border-radius: 10px;
   }
 
+
 .container{
     border: none solid ;
     padding: 100px 100px;
@@ -61,31 +62,6 @@ ul {
     margin-top: -50px;
 }
 
-.container > .container1 {
-    float: left;
-    position: inherit;
-    left: 0;
-    text-overflow: nowrap;
-}
-.container1 ::after{
-    content: "";
-    background-color: #000;
-    position: absolute;
-    width: 1px;
-    height: 525px;
-    top: 200px;
-    left: 50%;
-    display: block;
-}
-
-
-.container > .container2 {
-    float: right;
-    position: inherit;
-    text-overflow: nowrap;
-    padding-left: 100px;
-    margin-top: -75px;
-}
 input {
     border-radius: 5px;
     border:0;
@@ -95,3 +71,8 @@ button{
     border-radius: 10px;
     padding: 2px 5px;
 }
+
+#question{
+    resize: both;
+}
+    
