--- a/client/assets/styles-2.css
+++ b/client/assets/styles-2.css
@@ -267,22 +267,12 @@ input[type="radio"] {
 
 
 /*//////////////////////// PROGRESS BAR CSS START //////////////////////////////*/
-#progress {
-width: 25%;
-height: 10px;
-border-radius: 28px;
+progress[value]::-webkit-progress-bar {
+  background-color: #f3f3f3;
 }
 
-.progress-bar {
-display: flex;
-justify-content: center;
-justify-items: center;
-margin-top: 60px;
-}
-
-progress::-webkit-progress-value {
-background-color: #FFC93C;
-border-radius: 28px;
+progress[value]::-webkit-progress-value {
+  background-color: #4caf50;
 }
 /*//////////////////////// PROGRESS BAR CSS END //////////////////////////////*/
 
