--- a/client/assets/styles-2.css
+++ b/client/assets/styles-2.css
@@ -267,13 +267,32 @@ input[type="radio"] {
 
 
 /*//////////////////////// PROGRESS BAR CSS START //////////////////////////////*/
-progress[value]::-webkit-progress-bar {
-  background-color: #f3f3f3;
+
+.wrapper {
+  width: 500px;
+  margin: auto 0 auto 0;
 }
 
-progress[value]::-webkit-progress-value {
-  background-color: #4caf50;
+.progress-bar {
+  width: 100%;
+  background-color: #e0e0e0;
+  padding: 3px;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
 }
+
+.progress-bar-fill {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  height: 18px;
+  background-color: rgb(30, 158, 30);
+  border-radius: 3px;
+  transition: width 500ms ease-in-out;
+}
+
+
+
 /*//////////////////////// PROGRESS BAR CSS END //////////////////////////////*/
 
 
