--- a/client/assets/styles-2.css
+++ b/client/assets/styles-2.css
@@ -270,7 +270,8 @@ input[type="radio"] {
 
 .wrapper {
   width: 500px;
-  margin: auto 0 auto 0;
+  display: flex;
+  justify-content: center;
 }
 
 .progress-bar {
@@ -278,7 +279,6 @@ input[type="radio"] {
   background-color: #e0e0e0;
   padding: 3px;
   border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
 }
 
 .progress-bar-fill {
@@ -288,7 +288,6 @@ input[type="radio"] {
   height: 18px;
   background-color: rgb(30, 158, 30);
   border-radius: 3px;
-  transition: width 500ms ease-in-out;
 }
 
 
