--- a/client/Front-page/index.css
+++ b/client/Front-page/index.css
@@ -7,27 +7,59 @@ body{
     font-size: 30px;
     margin-left: 15px;
 }
-img{
-    width: 400px;
-    height: 90px;
-    margin-top: -10px;
-}
+#title-img {
+    width: calc(40% + 0.390625vw);
+    height: auto;
+      position: absolute;
+    left: 30px;
+    top: 15px;
+  }
+  @media screen and (max-width: 500px){
+    #title-img{
+    width: 200px;
+    left: 15px;
+    }}
+    @media screen and (min-width: 1160px){
+        #title-img{
+        width: 480px;
+        
+        }}
 
 ul {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
     white-space: nowrap;
-    margin-top: -70px;
+    /* margin-top: -70px; */
     border-bottom: 1px solid;
     margin-bottom: 80px;
     margin-right: 90px;
   }
-  
+  #sub-heading{
+    height:fit-content;
+    margin-bottom: 20px;
+  }
+  #sub-heading ul{
+    margin-top: -70px;
+  }
+  @media screen and (max-width: 700px){
+    #new-card{
+        margin-top: 20px;
+    width: 200px;
+   float: left;
+
+    }
+    #subtitle{
+        margin-top: 80px;
+    }
+    .subjects{
+        margin-top: -90px;
+    }
+}
   li {
     float:right;
     width: 10%;
-    font-size: 25px;
+    font-size: calc(16px + 0.390625vw);
     margin-bottom: 80px;
   }
   li a {
@@ -90,5 +122,13 @@ h3{
     width: 300px;
     margin-right: -20px;
     padding: 0px 20px;
+}
+h4 a{
+    text-decoration: none;
+    color: #000000;
+}
+h4 a:active{
+    text-decoration: none;
+    color: #f8f4f4;
 }
 
