--- a/client/Front-page/index.css
+++ b/client/Front-page/index.css
@@ -25,41 +25,22 @@ body{
         
         }}
 
+
 ul {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
     white-space: nowrap;
-    /* margin-top: -70px; */
+    margin-top: -20px;
     border-bottom: 1px solid;
     margin-bottom: 80px;
     margin-right: 90px;
   }
-  #sub-heading{
-    height:fit-content;
-    margin-bottom: 20px;
-  }
-  #sub-heading ul{
-    margin-top: -70px;
-  }
-  @media screen and (max-width: 700px){
-    #new-card{
-        margin-top: 20px;
-    width: 200px;
-   float: left;
-
-    }
-    #subtitle{
-        margin-top: 80px;
-    }
-    .subjects{
-        margin-top: -90px;
-    }
-}
+  
   li {
     float:right;
     width: 10%;
-    font-size: calc(16px + 0.390625vw);
+    font-size: 25px;
     margin-bottom: 80px;
   }
   li a {
@@ -68,6 +49,7 @@ ul {
     text-align: center;
     padding: 10px 12px;
     text-decoration: none;
+    font-size: calc(10px + 0.5vw);
     max-width: 720px;
     margin: 0 1px;
     background-color: #D9D9D9;
@@ -131,4 +113,3 @@ h4 a:active{
     text-decoration: none;
     color: #f8f4f4;
 }
-
