--- a/client/Front-page/landing-page.css
+++ b/client/Front-page/landing-page.css
@@ -89,13 +89,13 @@ p{
     margin-right: -4px;
 }
 #img1{
-    border-radius: 10px 0px 0px 0px;
+    border-radius: 20px 0px 0px 0px;
     border-right: 1px solid;
 }
 #img2{
-    border-radius: 0px 10px 0px 0px;
-    border-bottom: 1px solid;
-    margin-bottom: 5px;
+    margin-bottom: -7px;
+    height: 163px;
+    border-radius: 0px 20px 0px 0px ;
 }
 #img3{
     border-radius: 0px 0px 0px 10px;
@@ -104,6 +104,7 @@ p{
 #img4{
     border-radius: 0px 0px 10px 0px;
     border-left: 1px solid;
+    border-top: 1px solid;
 }
 
 /* .container > .container1 {
