--- a/client/Front-page/import.css
+++ b/client/Front-page/import.css
@@ -2,11 +2,11 @@ body{
     background: #6bb499;
     font-family: sans-serif;
     height: 100vh;
-    /* margin-left: 90px; */
+    margin-left: 90px;
 }
 img {
-    /* text-align: left; */
-    /* align-items: flex-start; */
+    text-align: left;
+    align-items: flex-start;
     width: 400px;
     height: 90px;
     margin-top: 10px;
@@ -47,63 +47,34 @@ ul {
     border-radius: 10px;
   }
 
+
 .container{
     border: none solid ;
     padding: 100px 100px;
     justify-content: center;
-    max-width: calc(500vh - 50px);
-    /* max-width: 500px; */
+    max-width: 90px;
+    max-height: 50px;
     border-radius: 20px;
     box-shadow: rgba(15, 19, 66, 0.4) 0px 2px 4px, rgba(8, 56, 17, 0.3) 0px 7px 13px -3px, #370b0b33 0px -3px 0px inset;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 350px;
-    margin-top: -45px;
-    margin-right: 400px;
-    resize: both;
-    /* overflow: auto; */
-    overflow:hidden;
-    
+    margin-left: 480px;
+    margin-top: -60px;
+    overflow: hidden;
+    margin-bottom: -100px;
 }
-
-.container > .container1 {
-    /* float: left; */
-    position: inherit;
-    left: 0;
-    text-overflow: nowrap;
-    border-right: 2px solid black;
-    padding-right: 100px;
-    
+h4{
+    font-size: 20px;
+    padding-top: 50px;
+    text-align: center;
+    margin-top: -70px;
+    margin-bottom: 10px;
 }
-/* .container1 ::after{
-    content: "";
-    background-color: #000;
-    position:absolute;
-    width: 1px;
-    height: 525px;
-    top: 200px;
-    left: 50%;
-    display: block;
-} */
-
-
-.container > .container2 {
-    float: right;
-    position: inherit;
-    text-overflow: nowrap;
-    padding-left: 100px;
-    margin-top: -78px;
-}
-input {
-    border-radius: 5px;
-    border:0;
-    outline:0;
-}
-input:focus {
-    outline:none!important;
-}
-button{
+textarea{
     border-radius: 10px;
-    padding: 2px 5px;
+}
+
+#import{
+    border-radius: 10px;
 }
