--- a/client/Front-page/createcard.css
+++ b/client/Front-page/createcard.css
@@ -1,51 +1,59 @@
 body{
-    background: #6bb499;
+    background: #58B09C;
     font-family: sans-serif;
     height: 100vh;
+    margin: 40px 0px;
     margin-left: 90px;
 }
-img {
-    text-align: left;
-    align-items: flex-start;
-    width: 400px;
-    height: 90px;
-    margin-top: 10px;
-    
+#logo-img{
+  width: 400px;
+  height: 90px;
+  margin-top: -5px;
+}
+#menu{
+  margin-left: 20px;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    margin-top: -70px;
-    border-bottom: 1px solid;
-    margin-bottom: 80px;
-    margin-right: 20px;
-  }
-  
-  li {
-    float:right;
-    width: 10%;
-    font-size: 25px;
-    margin-bottom: 80px;
-  }
-  li a {
-    display: block;
-    color: #000000;
-    text-align: center;
-    padding: 10px 12px;
-    text-decoration: none;
-    max-width: 720px;
-    margin: 0 1px;
-    background-color: #D9D9D9;
-    border-radius: 10px;
-  }
-  li a:hover {
-    background-color: #000000;
-    color: #58B09C;
-    border-radius: 10px;
-  }
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-top: -70px;
+  border-bottom: 1px solid;
+  margin-bottom: 80px;
+  margin-right: 88px;
+  margin-top: -70px;
+  margin-left: -25px;
+
+}
+
+li {
+  float:right;
+  width: 10%;
+  font-size: 25px;
+  margin-bottom: 80px;
+}
+li a {
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 10px 12px;
+  text-decoration: none;
+  max-width: 720px;
+  margin: 0 1px;
+  background-color: #D9D9D9;
+  border-radius: 10px;
+}
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+li a:hover {
+  background-color: #000000;
+  color: #58B09C;
+  border-radius: 10px;
+}
 
 
 .container{
@@ -59,7 +67,7 @@ ul {
     justify-content: center;
     align-items: center;
     margin-left: 280px;
-    margin-top: -50px;
+    margin-top: -40px;
 }
 input {
     border-radius: 5px;
