--- a/client/Front-page/help.css
+++ b/client/Front-page/help.css
@@ -1,7 +1,17 @@
 body{
-    background-color: #58B09C;
-    margin: 40px 0px;
-    margin-left: 50px;
+  background: #58B09C;
+  font-family: sans-serif;
+  height: 100vh;
+  margin: 40px 0px;
+  margin-left: 90px;
+}
+#logo-img{
+  width: 400px;
+  height: 90px;
+  margin-top: -10px;
+}
+#menu{
+  margin-left: 20px;
 }
 
 #title-img {
@@ -22,8 +32,47 @@ body{
         
         }}
 
-
-ul {
+        ul {
+          list-style-type: none;
+          padding: 0;
+          overflow: hidden;
+          white-space: nowrap;
+          margin-top: -70px;
+          border-bottom: 1px solid;
+          margin-bottom: 80px;
+          margin-right: 88px;
+          margin-top: -69px;
+          margin-left: -30px;
+        
+        }
+        
+        li {
+          float:right;
+          width: 10%;
+          font-size: 25px;
+          margin-bottom: 80px;
+        }
+        li a {
+          display: block;
+          color: #000000;
+          text-align: center;
+          padding: 10px 12px;
+          text-decoration: none;
+          max-width: 720px;
+          margin: 0 1px;
+          background-color: #D9D9D9;
+          border-radius: 10px;
+        }
+        li a:hover:not(.active) {
+          background-color: #111;
+        }
+        
+        li a:hover {
+          background-color: #000000;
+          color: #58B09C;
+          border-radius: 10px;
+        }
+/* ul {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
@@ -62,7 +111,22 @@ ul {
     color: #58B09C;
     border-radius: 10px;
   }
-
+*/
+.container{
+  padding: 100px 100px;
+  max-width: auto;
+  border-radius: 20px;
+  box-shadow: rgba(15, 19, 66, 0.4) 0px 2px 4px, rgba(8, 56, 17, 0.3) 0px 7px 13px -3px, #370b0b33 0px -3px 0px inset;
+  display: flexbox;
+  align-self: center;
+  margin-right: 250px;
+  margin-left: 180px;
+  padding: 20px 20px;
+  text-align: center;
+  margin-top: -70px;
+  /* margin-left: 280px;
+  margin-top: -50px; */
+}
 p{
     margin-right: 20px;
-}
+} 
