--- a/client/Front-page/subjects.css
+++ b/client/Front-page/subjects.css
@@ -1,7 +1,20 @@
 body{
     background-color: #58B09C;
     margin: 40px 0px;
-    margin-left: 50px;
+    margin-left: 90px;
+    font-family: sans-serif;
+    height: 100vh;
+    
+}
+#logo-img{
+    width: 400px;
+    height: 90px;
+    margin-top: -10px;
+}
+
+#menu{
+    /* margin-top: 0px; */
+    margin-left: 20px;
 }
 #subtitle{
     font-size: 30px;
@@ -10,7 +23,7 @@ body{
 #title-img {
     width: calc(40% + 0.390625vw);
     height: auto;
-      position: absolute;
+    position: absolute;
     left: 30px;
     top: 15px;
   }
@@ -26,7 +39,7 @@ body{
         }}
 
 
-ul {
+/* ul {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
@@ -59,7 +72,45 @@ ul {
     background-color: #000000;
     color: #58B09C;
     border-radius: 10px;
+  } */
+  ul {
+    list-style-type: none;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-top: -70px;
+    border-bottom: 1px solid;
+    margin-bottom: 80px;
+    margin-right: 90px;
   }
+  
+  li {
+    float:right;
+    width: 10%;
+    font-size: 25px;
+    margin-bottom: 80px;
+  }
+  li a {
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 10px 12px;
+    text-decoration: none;
+    max-width: 720px;
+    margin: 0 1px;
+    background-color: #D9D9D9;
+    border-radius: 10px;
+  }
+  li a:hover:not(.active) {
+    background-color: #111;
+  }
+
+  li a:hover {
+    background-color: #000000;
+    color: #58B09C;
+    border-radius: 10px;
+  }
+
 .subjects{
     border: 1px solid;
     border-radius: 20px;
