--- a/client/Front-page/landing-page.css
+++ b/client/Front-page/landing-page.css
@@ -1,125 +1,147 @@
 body{
-    background-color: #58B09C;
-    margin-top: 40px;
-    margin-left: 90px;
+  background-color: #58B09C;
+  margin: 40px 0px;
+  margin-left: 90px;
+  font-family: sans-serif;
+}
+
+#logo-img{
+  width: 400px;
+  height: 90px;
+  margin-top: -10px;
+}
+#menu{
+  margin-top: -60px;
 }
 #subtitle{
-    font-size: 30px;
-    margin-left: 15px;
+  font-size: 30px;
+  margin-left: 15px;
 }
-img{
-    width: 400px;
-    height: 90px;
-    margin-top: -10px;
+#title-img {
+  width: calc(40% + 0.390625vw);
+  height: auto;
+    position: absolute;
+  left: 30px;
+  top: 15px;
 }
-
+@media screen and (max-width: 500px){
+  #title-img{
+  width: 200px;
+  left: 15px;
+  }}
+  @media screen and (min-width: 1160px){
+      #title-img{
+      width: 480px;
+      
+      }}
 ul {
-    list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    margin-top: -70px;
-    border-bottom: 1px solid;
-    margin-bottom: 80px;
-    margin-right: 90px;
-  }
-  
-  li {
-    float:right;
-    width: 10%;
-    font-size: 25px;
-    margin-bottom: 80px;
-  }
-  li a {
-    display: block;
-    color: #000000;
-    text-align: center;
-    padding: 10px 12px;
-    text-decoration: none;
-    max-width: 720px;
-    margin: 0 1px;
-    background-color: #D9D9D9;
-    border-radius: 10px;
-  }
-  li a:hover:not(.active) {
-    background-color: #111;
-  }
+  list-style-type: none;
+  padding: 0px;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-top: -70px;
+  border-bottom: 1px solid;
+  margin-bottom: 80px;
+  margin-right: 90px;
+  margin-left: 100px;
+ } 
 
-  li a:hover {
-    background-color: #000000;
-    color: #58B09C;
-    border-radius: 10px;
-  }
-  
+li {
+  float:right;
+  width: 10%;
+  font-size: 25px;
+  margin-bottom: 80px;
+}
+li a {
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 10px 12px;
+  text-decoration: none;
+  max-width: 720px;
+  margin: 0 1px;
+  background-color: #D9D9D9;
+  border-radius: 10px;
+}
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+li a:hover {
+  background-color: #000000;
+  color: #58B09C;
+  border-radius: 10px;
+}
+
 h2{
-    font-size: 35px;
-    text-align: center;
-    margin-top: -60px;
-    margin-bottom: 100px;
-    margin-right: 75px;
+  font-size: 35px;
+  text-align: center;
+  margin-top: -60px;
+  margin-bottom: 100px;
+  margin-right: 75px;
 }
 p{
-    font-size: 25px;
-    text-align: justify;
+  font-size: 25px;
+  text-align: justify;
 }
 
 .container{
-    padding: 100px 100px;
-    max-width: auto;
-    border-radius: 20px;
-    box-shadow: rgba(15, 19, 66, 0.4) 0px 2px 4px, rgba(8, 56, 17, 0.3) 0px 7px 13px -3px, #370b0b33 0px -3px 0px inset;
-    display: flexbox;
-    align-self: center;
-    margin-right: 250px;
-    margin-left: 180px;
-    padding: 20px 20px;
-    text-align: center;
-    margin-top: -70px;
-    /* margin-left: 280px;
-    margin-top: -50px; */
+  padding: 100px 100px;
+  max-width: auto;
+  border-radius: 20px;
+  box-shadow: rgba(15, 19, 66, 0.4) 0px 2px 4px, rgba(8, 56, 17, 0.3) 0px 7px 13px -3px, #370b0b33 0px -3px 0px inset;
+  display: flexbox;
+  align-self: center;
+  margin-right: 250px;
+  margin-left: 180px;
+  padding: 20px 20px;
+  text-align: center;
+  margin-top: -90px;
+  /* margin-left: 280px;
+  margin-top: -50px; */
 }
 .images{
-    width: 350px;
-    height: 150px;
+  width: 350px;
+  height: 150px;
 }
 #img1, #img2{
-    margin-bottom: 6px;
+  margin-bottom: 6px;
 }
 #img1, #img3{
-    margin-right: -4px;
+  margin-right: -4px;
 }
 #img1{
-    border-radius: 20px 0px 0px 0px;
-    border-right: 1px solid;
+  border-radius: 20px 0px 0px 0px;
+  border-right: 1px solid;
 }
 #img2{
-    margin-bottom: -7px;
-    height: 163px;
-    border-radius: 0px 20px 0px 0px ;
+  margin-bottom: -7px;
+  height: 163px;
+  border-radius: 0px 20px 0px 0px ;
 }
 #img3{
-    border-radius: 0px 0px 0px 10px;
-    border-top: 1px solid;
+  border-radius: 0px 0px 0px 10px;
+  border-top: 1px solid;
 }
 #img4{
-    border-radius: 0px 0px 10px 0px;
-    border-left: 1px solid;
-    border-top: 1px solid;
+  border-radius: 0px 0px 10px 0px;
+  border-left: 1px solid;
+  border-top: 1px solid;
 }
 
 /* .container > .container1 {
-    float: left;
-    position: inherit;
-    left: 0;
-    text-overflow: nowrap;
+  float: left;
+  position: inherit;
+  left: 0;
+  text-overflow: nowrap;
 } */
 
 
 
 /* .container > .container2 {
-    float: right;
-    position: inherit;
-    text-overflow: nowrap;
-    padding-left: 100px;
-    margin-top: -75px;
+  float: right;
+  position: inherit;
+  text-overflow: nowrap;
+  padding-left: 100px;
+  margin-top: -75px;
 } */
