--- a/client/Front-page/subjects.css
+++ b/client/Front-page/subjects.css
@@ -113,3 +113,108 @@ h4 a:active{
     text-decoration: none;
     color: #f8f4f4;
 }
+
+
+/*//////////////////////// HAMBURGER CSS START //////////////////////////////*/
+
+.container {
+    display: none;
+    }
+    
+    .hamburger-menu {
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    top: 2rem;
+    right: 5rem;
+    z-index: 200;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    }
+    
+    .line {
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    box-shadow: 0.1rem 0.2rem rgba(0,0,0,0.2);
+    }
+    
+    .sidebar {
+    width: 15rem;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -40rem;
+    background-color: white;
+    transition: right 0.5s;
+    z-index: 1;
+    }
+    
+    .change .sidebar {
+    right: 0;
+    }
+    
+    .menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    }
+    
+    .menu-item {
+    text-align: center;
+    }
+    
+    .menu-link {
+    font-family: Nunito, sans-serif;
+    font-size: 1.5rem;
+    color: black;
+    }
+/*//////////////////////// HAMBURGER CSS END //////////////////////////////*/
+
+
+/*//////////////////////// MEDIA QUERIES CSS START //////////////////////////////*/
+/* Media query to show the hamburger menu on small screens */
+@media screen and (max-width: 995px) {
+  /* Hide regular navbar links */
+  .navbar button {
+    display: none;
+  }
+
+  /* #title-img {
+    display: none;
+  } */
+
+  /* Show hamburger menu button */
+  .container {
+    display: block;
+  }
+  @media screen and (max-width: 700px){
+    .hamburger-menu {
+   
+    top: 1.5rem;
+    right: 3rem;
+   
+}}
+@media screen and (max-width: 360px){
+  .hamburger-menu {
+ 
+  top: 1rem;
+  right: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
+ 
+}}
+
+  /* Show menu on hover, commented out over preferential button click event
+  .navbar .menu-button:hover + .menu,
+  .navbar .menu-button:focus + .menu {
+    display: block;
+  } */
+
+
+}
+/*//////////////////////// MEDIA QUERIES CSS END //////////////////////////////*/
