--- a/client/assets/CSS/landing-page.css
+++ b/client/assets/CSS/landing-page.css
@@ -1,149 +1,308 @@
-body{
-  background-color: #58B09C;
-  margin: 40px 0px;
-  margin-left: 90px;
-  font-family: sans-serif;
-}
+h1 {
+    font-size: 100px;
+  }
+  
+  body {
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    font-family: Nunito, sans-serif;
+    background-color: #58B09C;
+  }
+  /*//////////////////////// NAVBAR CSS START //////////////////////////////*
+  /* navbar container */
+  .navbar {
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center; 
+    color: #fff;
+    padding: 40px 30px 30px 30px;
+    margin-left: 400px;
+  }
 
-#logo-img{
-  width: 400px;
-  height: 90px;
-  margin-top: -10px;
-}
-#menu{
-  margin-top: -60px;
-}
-#subtitle{
-  font-size: 30px;
-  margin-left: 15px;
-}
-#title-img {
-  width: calc(40% + 0.390625vw);
-  height: auto;
+  .navbar-items a {
+    margin-top: 10px;
+  }
+  
+  /* Used to be the old title but switched to icon now */
+  /* .title {
+    font-size: 35px;
+    font-weight: 900;
+    color: #fff;
     position: absolute;
-  left: 30px;
-  top: 15px;
-}
-@media screen and (max-width: 500px){
-  #title-img{
-  width: 200px;
-  left: 15px;
+    left: 30px;
+    text-align: left;
+    text-transform: capitalize;
+    letter-spacing: 0.5rem;
+    text-shadow: 0.3rem 0.3rem 0.3rem #000;
+  } */
+  
+  #title-img {
+    width: calc(40% + 0.390625vw);
+    height: auto;
+    position: absolute;
+    left: 30px;
+    top: 15px;
+  }
+  @media screen and (max-width: 500px){
+    #title-img{
+    width: 200px;
+    left: 15px;
+    }}
+  
+  
+  /* navbar buttons */
+  a {
+    border-radius: 10px;
+    border: none;
+    font-family: Nunito, sans-serif;
+    font-weight: 650;
+    color: #000000;
+    font-size:calc(10px + 0.5vw);
+    padding: 0.6em 0.9em ;
+    background: #ffffff;
+    text-decoration: none;
+    cursor: pointer;
+    margin: auto 10px auto 10px;
+  }
+  
+  /* Navbar hover effect */
+  a:hover {
+    background-color: rgb(4, 4, 4);
+    border-color: rgb(200, 200, 200);
+    color: #fff;
+  }
+  
+  
+  /*//////////////////////// NAVBAR CSS END //////////////////////////////*/
+  
+  
+  
+  /*//////////////////////// HAMBURGER CSS START //////////////////////////////*/
+  
+  .container {
+  display: none;
+  }
+  
+  .hamburger-menu {
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  top: 2rem;
+  right: 5rem;
+  z-index: 200;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+  }
+  
+  .line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: white;
+  box-shadow: 0.1rem 0.2rem rgba(0,0,0,0.2);
+  }
+  
+  .sidebar {
+  width: 15rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: -40rem;
+  background-color: white;
+  transition: right 0.5s;
+  z-index: 1;
+  }
+  
+  .change .sidebar {
+  right: 0;
+  }
+  
+  .menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  }
+  
+  .menu-item {
+  text-align: center;
+  }
+  
+  .menu-link {
+  font-family: Nunito, sans-serif;
+  font-size: 1.5rem;
+  color: black;
+  }
+  /*//////////////////////// HAMBURGER CSS END //////////////////////////////*/
+  
+  
+  /*//////////////////////// FLASHCARD CSS START //////////////////////////////*/
+  .main-container {
+      max-width: 700px;
+      margin: 10px auto 0 auto;
+      background-color: none;
+      padding: 2rem;
+      display: flex;
+      perspective: 1000px;
+  }
+  
+  .flashcard {
+      width: 100%;
+      min-height: 300px;
+      border-radius: 28px;
+      position: relative;
+      text-align: center;
+      background-color: #58B09C;
+      padding: 0 4rem 18rem 4rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: 0 0 40px 20px rgba(0, 0, 0, 0.2);
+      transform-style: preserve-3d;
+      transition: transform 0.5s ;
+  }
+  
+  .front{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    text-align: center;
+  }
+  
+  .back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    text-align: center;
+  }
+
+  
+  .flashcard-form {
+    margin: 0 0;
+  }
+  
+  .flashcard-name {
+    font-size: calc(16px + 0.390625vw);
+    font-weight: 650;
+    letter-spacing: 0.1rem;
+    color: #111;
+    margin-top: 0;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .images{
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;;
+    height: 150px;
+  }
+
+  #img1, #img2{
+    margin-bottom: 6px;
+  }
+  #img1, #img3{
+    margin-right: -4px;
+  }
+  #img1{
+    border-radius: 20px 0px 0px 0px;
+    border-right: 1px solid;
+  }
+  #img2{
+    margin-bottom: -7px;
+    height: 163px;
+    border-radius: 0px 20px 0px 0px ;
+  }
+  #img3{
+    border-radius: 0px 0px 0px 10px;
+    border-top: 1px solid;
+  }
+  #img4{
+    border-radius: 0px 0px 10px 0px;
+    border-left: 1px solid;
+    border-top: 1px solid;
+  }
+  
+  /*///// Added css for spacing inside flashcard container ///*/
+  label.flashcard-name {
+    display: block;
+    /* width: 100%; */
+  }
+  
+  input[type="radio"] {
+    margin-top: 10px;
+  }
+  /*///// Added css for spacing inside flashcard container ///*/
+  
+  p {
+    width: 80%;
+    margin: 0 auto 0 auto;
+    text-align: justify;
+  }
+  
+  @media screen and (max-width: 370px){
+    #counter{
+      bottom: 105px;
+    }
+  }
+
+  /*//////////////////////// FLASHCARD CSS END //////////////////////////////*/
+  
+  
+  
+  
+  
+  /*//////////////////////// MEDIA QUERIES CSS START //////////////////////////////*/
+  /* Media query to show the hamburger menu on small screens */
+  @media screen and (max-width: 995px) {
+    /* Hide regular navbar links */
+    .navbar a {
+      display: none;
+    }
+  
+    /* #title-img {
+      display: none;
+    } */
+  
+    /* Show hamburger menu button */
+    .container {
+      display: block;
+    }
+    @media screen and (max-width: 700px){
+      .hamburger-menu {
+     
+      top: 1.5rem;
+      right: 3rem;
+     
   }}
-  @media screen and (min-width: 1160px){
-      #title-img{
-      width: 480px;
-      
-      }}
-ul {
-  list-style-type: none;
-  padding: 0px;
-  overflow: hidden;
-  white-space: nowrap;
-  margin-top: -70px;
-  border-bottom: 1px solid;
-  margin-bottom: 80px;
-  margin-right: 90px;
-  margin-left: 100px;
- } 
-
-li {
-  float:right;
-  width: 10%;
-  font-size: 25px;
-  margin-bottom: 80px;
-}
-li a {
-  display: block;
-  color: #000000;
-  text-align: center;
-  padding: 10px 12px;
-  text-decoration: none;
-  max-width: 720px;
-  margin: 0 1px;
-  background-color: #D9D9D9;
-  border-radius: 10px;
-}
-li a:hover:not(.active) {
-  background-color: #111;
-}
-
-li a:hover {
-  background-color: #000000;
-  color: #58B09C;
-  border-radius: 10px;
-}
-
-
-h2{
-  font-size: 35px;
-  text-align: center;
-  margin-top: -60px;
-  margin-bottom: 100px;
-  margin-right: 75px;
-}
-p{
-  font-size: 25px;
-  text-align: justify;
-}
-
-.container{
-
-  padding: 100px 100px;
-  max-width: auto;
-  border-radius: 20px;
-  box-shadow: rgba(15, 19, 66, 0.4) 0px 2px 4px, rgba(8, 56, 17, 0.3) 0px 7px 13px -3px, #370b0b33 0px -3px 0px inset;
-  display: flexbox;
-  align-self: center;
-  margin-right: 250px;
-  margin-left: 180px;
-  padding: 20px 20px;
-  text-align: center;
-  margin-top: -90px;
-  /* margin-left: 280px;
-  margin-top: -50px; */
-}
-.images{
-  width: 350px;
-  height: 150px;
-}
-#img1, #img2{
-  margin-bottom: 6px;
-}
-#img1, #img3{
-  margin-right: -4px;
-}
-#img1{
-  border-radius: 20px 0px 0px 0px;
-  border-right: 1px solid;
-}
-#img2{
-  margin-bottom: -7px;
-  height: 163px;
-  border-radius: 0px 20px 0px 0px ;
-}
-#img3{
-  border-radius: 0px 0px 0px 10px;
-  border-top: 1px solid;
-}
-#img4{
-  border-radius: 0px 0px 10px 0px;
-  border-left: 1px solid;
-  border-top: 1px solid;
-}
-
-/* .container > .container1 {
-  float: left;
-  position: inherit;
-  left: 0;
-  text-overflow: nowrap;
-} */
-
-
-
-/* .container > .container2 {
-  float: right;
-  position: inherit;
-  text-overflow: nowrap;
-  padding-left: 100px;
-  margin-top: -75px;
-} */
+  @media screen and (max-width: 360px){
+    .hamburger-menu {
+   
+    top: 1rem;
+    right: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
+   
+  }}
+  
+    /* Show menu on hover, commented out over preferential button click event
+    .navbar .menu-button:hover + .menu,
+    .navbar .menu-button:focus + .menu {
+      display: block;
+    } */
+  
+  
+  }
+  /*//////////////////////// MEDIA QUERIES CSS END //////////////////////////////*/
