--- a/client/assets/CSS/help.css
+++ b/client/assets/CSS/help.css
@@ -1,13 +1,16 @@
 
 body {
-    background-color: #58B09C;
-    margin: 40px 0px;
-    margin-left: 50px;
-
+  margin: 0;
+  height: 100vh;
+  width: 100%;
+  font-family: Nunito, sans-serif;
+  background-color: #58B09C;
 }
 .header{
   min-height: 120px;
     border-bottom: 1px solid;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 /*//////////////////////// NAVBAR CSS START //////////////////////////////*
 /* navbar container */
@@ -176,7 +179,11 @@ color: black;
 
 
 }
- 
+.container1{
+  margin-left: 40px;
+  margin-right: 20px;
+ }
+ /*
 ul {
   list-style-type: none;
   padding: 0;
@@ -216,7 +223,7 @@ ul {
           background-color: #000000;
           color: #58B09C;
           border-radius: 10px;
-        }
+        } */
 /* ul {
     list-style-type: none;
     padding: 0;
