--- a/client/assets/CSS/account.css
+++ b/client/assets/CSS/account.css
@@ -41,6 +41,7 @@ body {
 
 #title-img {
   width: calc(40% + 0.390625vw);
+  max-width: 560px;
   height: auto;
     position: absolute;
   left: 30px;
