--- a/client/assets/CSS/styles-2.css
+++ b/client/assets/CSS/styles-2.css
@@ -35,6 +35,7 @@ body {
 
 #title-img {
   width: calc(40% + 0.390625vw);
+  max-width: 560px;
   height: auto;
     position: absolute;
   left: 30px;
