nav bab positionning

--- a/client/assets/CSS/help.css
+++ b/client/assets/CSS/help.css
@@ -9,8 +9,8 @@ body {
 .header{
   min-height: 120px;
     /* border-bottom: 1px solid; */
-    margin-left: 10px;
-    margin-right: 10px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
 }
 /*//////////////////////// NAVBAR CSS START //////////////////////////////*
 /* navbar container */
