--- a/client/assets/CSS/account.css
+++ b/client/assets/CSS/account.css
@@ -7,8 +7,8 @@ body {
 }
 .header{
   min-height: 120px;
-  margin-left: 10px;
-  margin-right: 10px;
+  /* margin-left: 10px;
+  margin-right: 10px; */
 }
 /*//////////////////////// NAVBAR CSS START //////////////////////////////*
 /* navbar container */
